fixed nav on Firefox

--- a/css/theme.css
+++ b/css/theme.css
@@ -45,8 +45,8 @@ body {
 
 @media screen and (max-width: 860px) and (min-width: 768px) {
   .navbar-nav>li>a {
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
 
